# pine

./: Cargo.toml
parser/: Cargo.toml
parser/src/: error.rs  input.rs  inputctx.rs  lib.rs  readme.md  tags.rs
parser/src/ast/: ast.rs  built_in.rs  comment.rs  from.rs  mod.rs  nodeid.rs  obj_array.rs  object.rs  value.rs
parser/src/ast/node/: variable.rs
parser/src/ast/types/: types.rs
parser/src/err/: ast.rs  error.rs  main.rs
parser/src/genv/: ident.rs  mod.rs
parser/src/lexer/: ast.rs  delimiters.rs  identifier.rs  mod.rs  module.rs  operators.rs  punctuation.rs  util.rs
parser/src/parsing/: mod.rs  module.rs  parse_code_block.rs  parse_identifier.rs  parse_literal.rs  signatures.rs  statement.rs  types.rs  util.rs
parser/src/parsing/statement/: enumeration.rs  expression.rs  function.rs  variable.rs
parser/src/parsing/statement/expression/: array.rs  arrow_function.rs  call.rs  code_block.rs  index.rs  primitives.rs  simple_binary.rs
parser/src/parsing/statement/variable/: parse_assign.rs  parse_declaration_mode.rs  parse_type.rs  parse_variable.rs
position/src/: format.rs
runtime/: Cargo.toml
runtime/src/: environment.rs  lib.rs
runtime/src/api/: events.rs  reflection.rs  util.rs
runtime/src/eval/expression/: array.rs  arrow_function.rs  binary.rs  call.rs  index.rs  literal.rs  mod.rs  new.rs  switch.rs
runtime/src/eval/statement/: enumeration.rs  export.rs  function.rs  if_else.rs  import.rs  (+3 more)
runtime/src/value/: builders.rs  mod.rs
tests/: Cargo.toml  main.tsx  runtime.rs
tests/ts/: arrowfunction.ts  function.ts  function1.ts
