[package]
name = "tsr-parser"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

nom = "7.1.3"
nom_locate = "4.2.0"
nom-greedyerror = "0.5.0"

bytes = "1.7.1"
regex = { version = "1.10.6", features = [] }


position = { path = "../position" }
hashbrown = "0.14.5"
rustc-hash = "2.0.0"
